--- a/index.html
+++ b/index.html
@@ -223,6 +223,6 @@
             </a>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
