--- a/index.html
+++ b/index.html
@@ -223,6 +223,6 @@
             </a>
         </div>
     </div>
-    <script src="https://raw.githubusercontent.com/Daniel275-dev/Site-Elite-main/refs/heads/main/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Daniel275-dev/Site-Elite-main/script.js"></script>
 </body>
 </html>
