--- a/index.html
+++ b/index.html
@@ -228,6 +228,6 @@
             </a>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Daniel275-dev/Site-Elite-main/script.js"></script>
 </body>
 </html>
